--- a/html5/widgets.html
+++ b/html5/widgets.html
@@ -3,49 +3,49 @@
 <head>
 <title>All widgets</title>
 <style>
-window skip one, window skip two, window skip three, window skip four, window skip five
+mk6win skip one, mk6win skip two, mk6win skip three, mk6win skip four, mk6win skip five
 	{ display: block; min-width: 2em; min-height: 1em;  }
-window skip one::before, window skip two::before, window skip three::before, window skip four::before, window skip five::before
+mk6win skip one::before, mk6win skip two::before, mk6win skip three::before, mk6win skip four::before, mk6win skip five::before
 	{ display: inline-block; width: 1px; overflow: show; word-wrap: normal; }
-window skip one { min-height: 1.2em; }
-window skip two { min-height: 2.4em; }
-window skip three,
-window skip four,
-window skip five { min-height: 6em; }
-window skip one::before { content: "..." }
-window skip two::before { content: "... ..."; width: 1em; }
-window skip three::before { content: "..." }
-window skip four::before { content: "..." }
-window skip five::before { content: "..." }
+mk6win skip one { min-height: 1.2em; }
+mk6win skip two { min-height: 2.4em; }
+mk6win skip three,
+mk6win skip four,
+mk6win skip five { min-height: 6em; }
+mk6win skip one::before { content: "..." }
+mk6win skip two::before { content: "... ..."; width: 1em; }
+mk6win skip three::before { content: "..." }
+mk6win skip four::before { content: "..." }
+mk6win skip five::before { content: "..." }
 
 
 
 
 
-window { margin-top: 1em; display: block; min-width: 1em; min-height: 2em; }
-window[dialog] { width: 80%; margin-left: auto; margin-right: auto; }
+mk6win { margin-top: 1em; display: block; min-width: 1em; min-height: 2em; }
+mk6win[dialog] { width: 80%; margin-left: auto; margin-right: auto; }
 
-window *[column] { display: inline-block; width: 33% ;}
-window *[column2x] { display: inline-block; width: 66% ;}
+mk6win *[column] { display: inline-block; width: 33% ;}
+mk6win *[column2x] { display: inline-block; width: 66% ;}
 
-window title { display: block; line-height: 1.5em; }
+mk6win title { display: block; line-height: 1.5em; }
 
-window list { display: block; vertical-align: top;  min-width: 1em; min-height: 2em; }
-window list label { display: block; }
+mk6win list { display: block; vertical-align: top;  min-width: 1em; min-height: 2em; }
+mk6win list label { display: block; }
 
-window icon { display: inline-block; width: 6em; height: 5em; }
-window icon[file]:before { content: icon-file; }
+mk6win icon { display: inline-block; width: 6em; height: 5em; }
+mk6win icon[file]:before { content: icon-file; }
 icon-file { display: inline-block; width: 3em; height: 3em; background-color: red; }
 
 /* theme Xwindow flat */
-window { background-color: #ccc; color: black; border: 1px solid black; }
-window title { text-align: center; background-color: blue; color: white; }
-window list { background-color: white; color: black; }
-window list label[clickhere] { background-color: blue; color: white; }
-window icon { background-color: #fff; color: black; border: 1px solid black; }
+mk6win { background-color: #ccc; color: black; border: 1px solid black; }
+mk6win title { text-align: center; background-color: blue; color: white; }
+mk6win list { background-color: white; color: black; }
+mk6win list label[clickhere] { background-color: blue; color: white; }
+mk6win icon { background-color: #fff; color: black; border: 1px solid black; }
 
-window *[clickhere] { position: relative; }
-window *[clickhere]::after {
+mk6win *[clickhere] { position: relative; }
+mk6win *[clickhere]::after {
 	display: block;
 	content: "🠝" attr(clickhere);
 	font-size: 1.5em;
@@ -62,51 +62,49 @@ window *[clickhere]::after {
 <body>
 
 <h1>window</h1>
-<window></window>
+<mk6win></mk6win>
 
-<window><title>My Window</title>
-</window>
+<mk6win><title>My Window</title>
+</mk6win>
 
-<h1>window pure grid</h1>
-<p>For no particular reason, I suggest the pure css framework, only the grid stuff</p>
+<h1>grid</h1>
 
-
-<h2>1/3 window.</h2>
-<window style="width:33%"><title>My Window</title>
-</window>
+<h2>window at any size</h2>
+<mk6win style="width:33%"><title>My Window</title>
+</mk6win>
 
 
 <h1>lists</h1>
 
-<window><title>My Window</title>
+<mk6win><title>My Window</title>
 <list column>
 	<label>Option1</label>
 </list>
 <label>asdf</label><input value="asdfasdf"/>
-</window>
+</mk6win>
 
-<window><title>My Window</title>
+<mk6win><title>My Window</title>
 <label>value:</label><input value="=SUM(A1:B12)"/>
 <list>
 	<label>Long option on a list full.</label>
 	<label>Long option on a list full.</label>
 	<label>TODO: table inside for spreadsheet.</label>
 </list>
-</window>
+</mk6win>
 
 <h1>skip</h1>
-<window><title>My Window</title>
+<mk6win><title>My Window</title>
 <skip><two/></skip>
 <label>Input something</label><input value="type something here">
-</window>
+</mk6win>
 
 
 <h1>Examples</h1>
 
 <h2>IntelliJ setting</h2>
 
-<window><title>IntelliJ IDE Community</title>
-	<window dialog><title>Settings</title>
+<mk6win><title>IntelliJ IDE Community</title>
+	<mk6win dialog><title>Settings</title>
 	<list column>
 		<skip><two></skip>
 		<label>Compiler</label>
@@ -117,12 +115,12 @@ window *[clickhere]::after {
 	</div>
 	<button>Cancel</button>
 	<button default clickhere=2>Save</button>
-	</window>
-</window>
+	</mk6win>
+</mk6win>
 
 <h2>win File explorer</h2>
 
-<window>
+<mk6win>
 	<title>Title of the window</title>
 	<list column>
 		<label>C:\</label>
@@ -137,7 +135,7 @@ window *[clickhere]::after {
 		<icon image>wallpaper.bmp</icon>
 		<icon executable>windows.exe</icon>
 	</list>
-</window>
+</mk6win>
 
 <h2>mac preferences window</h2>
 
